// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day should not render <Day /> and compare with snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginBottom": 10,
        "marginTop": 5,
      },
      Object {},
    ]
  }
>
  <View
    style={Object {}}
  >
    <Text
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#b2b2b2",
            "fontSize": 12,
            "fontWeight": "600",
          },
          Object {},
        ]
      }
    >
      Invalid Date
    </Text>
  </View>
</View>
`;

exports[`Day should render <Day /> and compare with snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginBottom": 10,
        "marginTop": 5,
      },
      Object {},
    ]
  }
>
  <View
    style={Object {}}
  >
    <Text
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "color": "#b2b2b2",
            "fontSize": 12,
            "fontWeight": "600",
          },
          Object {},
        ]
      }
    >
      Apr 17, 2022
    </Text>
  </View>
</View>
`;
